fix snow z-index

--- a/src/snow/snowStyle.scss
+++ b/src/snow/snowStyle.scss
@@ -12,4 +12,6 @@ body {
 canvas {
     display: block;
     position: absolute;
+    z-index: -1;
 }
+
